--- a/index_underscore.html
+++ b/index_underscore.html
@@ -2,156 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Preview Slideshow</title>
-	<style type="text/css">
-		* {
-			padding: 0;
-			margin: 0;
-		}
-
-		body {
-			padding: 50px 0;
-			background-color: #FFF;
-			font-size: 14px;
-			font-family: 'Avenir Next';
-			color: #555;
-			-webkit-font-smoothing: antialiased; /* 字体抗锯齿 */
-		}
-
-		.slider .main .main-i,
-		.slider .main,
-		.slider {
-			width: 100%;
-			height: 400px;
-			position: relative;
-		}
-		/* 幻灯片区域 */
-		.slider .main {
-			overflow: hidden;
-		}
-
-		/* 每一个幻灯片的样式 */
-		.slider .main .main-i img {
-			width: 100%;
-			position: absolute;
-			left: 0;
-			top: 0;
-		}
-		.slider .main .main-i .caption {
-			position: absolute;
-			right: 50%;
-			top: 30%;
-			z-index: 9;
-		}
-		.slider .main .main-i .caption h2 {
-			font-size: 40px;
-			line-height: 50px;
-			color: #B5B5B5;
-			text-align: right;
-		}
-		.slider .main .main-i .caption h3 {
-			font-size: 70px;
-			line-height: 70px;
-			color: #000;
-			text-align: right;
-			font-family: 'Open Sans Condensed';
-		}
-
-		/* 控制按钮区域 */
-		.slider .ctrl {
-			width: 100%;
-			height: 13px;
-			line-height: 13px;
-			text-align: center;
-			position: absolute;
-			left: 0;
-			bottom: -13px;
-		}
-
-		.slider .ctrl .ctrl-i {
-			display: inline-block;
-			width: 150px;
-			height: 13px;
-			background-color: #666;
-			box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
-			position: relative;
-			margin-left: 1px;
-		}
-
-		.slider .ctrl .ctrl-i img {
-			width: 100%;
-			position: absolute;
-			left: 0;
-			bottom: 50px;
-			z-index: 1;
-			opacity: 0;
-			-webkit-transition: all .2s;
-		}
-
-		.slider .ctrl .ctrl-i:hover {
-			background-color: #F0F0F0;
-		}
-		.slider .ctrl .ctrl-i:hover img {
-			bottom: 13px;
-
-			-webkit-box-reflect: below 0px -webkit-gradient(
-				linear, left top, left bottom, 
-				from( transparent ),
-				color-stop( 50%, transparent ),
-				to( rgba( 255, 255, 255, 0.3 ) )
-			);
-
-			opacity: 1;
-		}
-
-		/* active 当前展现的状态 */
-		.slider .ctrl .ctrl-i_active:hover,
-		.slider .ctrl .ctrl-i_active {
-			background-color: #000;
-		}
-
-		.slider .ctrl .ctrl-i_active:hover img {
-			opacity: 0;
-		}
-
-		/* 幻灯片切换样式 */
-		.slider .main .main-i {
-			opacity: 0;
-			position: absolute;
-			right: 50%;
-			top: 0;
-			-webkit-transition:all 0.5s;
-		}
-
-		.slider .main .main-i h2,
-		.slider .main .main-i h3 {
-			opacity: 0;
-			-webkit-transition:all 1s 0.8s;
-		}
-
-		.slider .main .main-i h2 {
-			margin-right: 45px;
-		}
-
-		.slider .main .main-i h3 {
-			margin-right: -45px;
-		}
-	
-		.slider .main .main-i_active {
-			right: 0;
-			opacity: 1;
-		}
-
-		.slider .main .main-i_active h2,
-		.slider .main .main-i_active h3 {
-			margin-right: 0px;
-			opacity: 1;
-		}
-
-		.slider .main .main-i .caption {
-			margin-right: 13%;
-		}
-	</style>
+	<title>Preview Slideshow (Underscore.js 版本)</title>
+	<link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 	<div class="slider">
@@ -166,23 +18,23 @@
 -->
 	<script type="text/javascript" src="http://apps.bdimg.com/libs/underscore.js/1.7.0/underscore-min.js"></script>
 	<script id="temp_main" type="text/template">
-		<%_.each(data, function(item) {%>
-		<div class="main-i" id="main_<%=item.img%>">
+		<%_.each(data, function(item, index) {%>
+		<div class="main-i<% if(index%2 == 0) print(' main-i_right'); %>" id="main_<%=item.img%>">
 			<div class="caption">
 				<h2><%=item.h1%></h2>
 				<h3><%=item.h2%></h3>
 			</div>
-			<img src="imgs/<%=item.img%>.jpg" />
+			<img src="imgs/<%=item.img%>.jpg" class="picture" />
 		</div>
+
 		<%});%>
+		<div class="main-i" id="main_background"></div>
 	</script>
 
 	<script id="temp_ctrl" type="text/template">
-		<%_.each(data, function(item) {%>
-			<a href="javascript:switchSlider(<%=item.img%>);" class="ctrl-i" id="ctrl_<%=item.img%>">
+		<%_.each(data, function(item) {%><a href="javascript:switchSlider(<%=item.img%>);" class="ctrl-i" id="ctrl_<%=item.img%>">
 				<img src="imgs/<%=item.img%>.jpg" />
-			</a>
-		<%});%>
+			</a><%});%>
 	</script>
 
 	<script type="text/javascript">
@@ -255,9 +107,48 @@
 
 	}
 
+	// 5. 幻灯片切换
+	function switchSlider(n){
+		// 5.1 获取要展现的幻灯 & 控制按钮 DOM
+		var main = g('main_' + n);
+		var ctrl = g('ctrl_' + n);
+
+		// 5.2 获取所有的幻灯以及控制按钮
+		var clear_main = g('.main-i');
+		var clear_ctrl = g('.ctrl-i');
+		// 5.3 清除他们的 active 样式
+		for(var i = 0; i < clear_ctrl.length; i++){
+			clear_main[i].className = clear_main[i].className
+				.replace(' main-i_active', '');
+			clear_ctrl[i].className = clear_ctrl[i].className
+				.replace(' ctrl-i_active', '');
+		}
+
+		// 5.4 为当前控制按钮和幻灯片附加样式
+		main.className += " main-i_active";
+		ctrl.className += " ctrl-i_active";
+
+		// 7.2 切换时，复制上一张幻灯片到 main_background 中
+		setTimeout(function (){
+			g('main_background').innerHTML = main.innerHTML;
+		},1000);
+	}
+
+	// 6. 动态调整图片的 margin-top 以使其垂直居中
+	function movePictures(){
+		var pictures = g('.picture');
+		for(i = 0; i < pictures.length; i++){
+			pictures[i].style.marginTop = (-1 * pictures[i].clientHeight/2) + 'px';
+		}
+	}
+
 	// 4.定义何时处理幻灯片输出
 	window.onload = function (){
 		addSliders();
+		switchSlider(1);
+		setTimeout(function (){
+			movePictures();
+		},100)
 	}
 	</script>
 </body>
