不再需要获取模版内容代码

--- a/index_underscore.html
+++ b/index_underscore.html
@@ -60,13 +60,13 @@
 	// 3. 添加幻灯片的操作（所有幻灯片&对应的按钮）
 	function addSliders(){
 		// 3.1 获取模版
-		var tpl_main = g('template_main').innerHTML
-			.replace(/^\s*/, '')
-			.replace(/\s*$/, '');
+		// var tpl_main = g('template_main').innerHTML
+		// 	.replace(/^\s*/, '')
+		// 	.replace(/\s*$/, '');
 
-		var tpl_ctrl = g('template_ctrl').innerHTML
-			.replace(/^\s*/, '')
-			.replace(/\s*$/, '');
+		// var tpl_ctrl = g('template_ctrl').innerHTML
+		// 	.replace(/^\s*/, '')
+		// 	.replace(/\s*$/, '');
 
 		// underscore 写法
 		var temp_main = _.template(g('temp_main').innerHTML);
